--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,37 @@ body {
   padding: 0;
   font-family: 'Montserrat', sans-serif;
 }
+
+#root::before {
+  content : "";
+  display: block;
+  position: absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  background-image:url(https://images.unsplash.com/photo-1449247709967-d4461a6a6103?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=1053a3cdbabdd85102b762b3a05966ae&auto=format&fit=crop&w=1651&q=80);
+  background-size: cover;
+  background-repeat:no-repeat;
+  width: 100%;
+  height: 100%;
+  opacity : 0.35;
+  z-index: -999;
+}
+
+.root{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: -999;
+  /* position: relative; */
+} 
+
+.particles-js{
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 999;
+}
