--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   background-repeat:no-repeat;
   width: 100%;
   height: 100%;
-  opacity : 0.35;
+  opacity : 0.30;
   z-index: -999;
 }
 
@@ -31,11 +31,10 @@ body {
   /* position: relative; */
 } 
 
-.particles-js{
+.particles{
   height: 100vh;
   width: 100vw;
   position: fixed;
-  z-index: 999;
 }
 
 .tooltip{
